<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_menu_numeros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.bit01.numerologiaapp.MenuNumeros">


    <TextView
        android:text="@string/MenuNum_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/MenuNum_Alma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu1"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:text="@string/MenuNum_Karma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu2"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu1"
        app:layout_constraintRight_toRightOf="@+id/btnMenu1" />

    <Button
        android:text="@string/MenuNum_Talento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu3"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/btnMenu1"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toTopOf="@+id/btnMenu1" />

    <Button
        android:text="@string/MenuNum_Destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu4"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu3"
        app:layout_constraintRight_toRightOf="@+id/btnMenu3"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu3"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:text="@string/MenuNum_Camino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu5"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/btnMenu3"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toTopOf="@+id/btnMenu3" />

    <Button
        android:text="@string/MenuNum_EdadCosmica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu6"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu5"
        app:layout_constraintRight_toRightOf="@+id/btnMenu5"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu5" />

    <Button
        android:text="@string/MenuNum_Madurez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu7"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu2"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu2"
        app:layout_constraintRight_toRightOf="@+id/btnMenu2" />

    <Button
        android:text="@string/MenuNum_AnioPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu8"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu4"
        app:layout_constraintRight_toRightOf="@+id/btnMenu4"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu4" />

    <Button
        android:text="@string/MenuNum_Pinaculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu9"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu6"
        app:layout_constraintRight_toRightOf="@+id/btnMenu6"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu6" />

    <Button
        android:text="@string/MenuNum_Sombra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu10"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu8"
        app:layout_constraintRight_toRightOf="@+id/btnMenu8"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu8" />

    <Button
        android:text="@string/MenuNum_Compatibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMenu11"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenu10"
        app:layout_constraintRight_toRightOf="@+id/btnMenu10"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu10" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="408dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
