<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_pedir_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.bit01.numerologiaapp.PedirDatos">

    <Button
        android:text="@string/PedirDatos_btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFecha"
        app:layout_constraintLeft_toLeftOf="@+id/lblFechaTxt"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lblFechaTxt" />

    <TextView
        android:text="@string/PedirDatos_txtfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblFechaTxt"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lblNum"
        app:layout_constraintLeft_toLeftOf="@+id/lblNum" />

    <TextView
        android:text="@string/PedirDatos_fechaNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblFecha"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/lblFechaTxt"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/lblFechaTxt" />

    <TextView
        android:text="@string/PedirDatos_txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNombreTxt"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/btnFecha"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNombre"
        android:hint="@string/PedirDatos_ejNombre"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/lblNombreTxt"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/lblNombreTxt"
        app:layout_constraintBottom_toBottomOf="@+id/lblNombreTxt" />

    <TextView
        android:text="@string/PedirDatos_txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblApellidoTxt"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/lblNombreTxt"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/lblNombreTxt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextApellido"
        android:hint="@string/PedirDatos_ejApellido"
        app:layout_constraintLeft_toLeftOf="@+id/editTextNombre"
        app:layout_constraintTop_toTopOf="@+id/lblApellidoTxt"
        app:layout_constraintBottom_toBottomOf="@+id/lblApellidoTxt" />

    <Button
        android:text="@string/PedirDatos_Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalcular"
        app:layout_constraintLeft_toLeftOf="@+id/lblNum"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

    <TextView
        android:text="@string/app_name_f3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNum"
        android:textSize="24sp"
        android:textColor="@android:color/holo_purple"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintLeft_toLeftOf="@+id/btnCalcular"
        app:layout_constraintRight_toRightOf="@+id/btnCalcular">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
