<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mx.com.bit01.numerologiaapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/Main_Boton_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTantrico"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/Main_Title"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="128dp" />

    <Button
        android:text="@string/Main_Boton_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPitagorico"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btnTantrico"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/btnTantrico"
        app:layout_constraintLeft_toLeftOf="@+id/btnTantrico" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnPitagorico"
        app:layout_constraintRight_toRightOf="@+id/btnPitagorico"
        app:adSize="BANNER">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
